--- a/frontend/src/app/auth/components/auth-component/auth.component.css
+++ b/frontend/src/app/auth/components/auth-component/auth.component.css
@@ -4,3 +4,15 @@
   margin: 0 5px;
   opacity: 0.8;
 }
+
+.auth-data {
+  width: 200px;
+  padding: 10px;
+}
+.m-0 {
+  margin: 0;
+}
+
+h6.m-0 {
+  opacity: 0.8;
+}
