--- a/frontend/src/app/car-search/car-search/car-search.component.html
+++ b/frontend/src/app/car-search/car-search/car-search.component.html
@@ -3,8 +3,8 @@
     <app-car-search-filter></app-car-search-filter>
   </div>
   <div fxFlex="80%" fxLayout="column" fxLayoutGap="0.5%">
-    <button class="search-button" mat-raised-button type="button" color="primary">Search</button>
-    <table mat-table [dataSource]="cars" class="mat-elevation-z8">
+    <button class="search-button" mat-raised-button type="button" color="primary" (click)="getDataFromService()">Search</button>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <!-- Brand Column -->
       <ng-container matColumnDef="brand">
@@ -19,9 +19,9 @@
       </ng-container>
 
       <!-- Production date Column -->
-      <ng-container matColumnDef="productionDate">
-        <th mat-header-cell *matHeaderCellDef> Production date </th>
-        <td mat-cell *matCellDef="let car"> {{car.ProductionDate.toISOString().slice(0, 10)}} </td>
+      <ng-container matColumnDef="productionYear">
+        <th mat-header-cell *matHeaderCellDef> Production year </th>
+        <td mat-cell *matCellDef="let car"> {{car.ProductionYear}} </td>
       </ng-container>
 
       <!-- Capacity Column -->
