--- a/frontend/src/app/car-search/car-search/car-search.component.html
+++ b/frontend/src/app/car-search/car-search/car-search.component.html
@@ -4,40 +4,40 @@
   </div>
   <div fxFlex="80%" fxLayout="column" fxLayoutGap="0.5%">
     <button class="search-button" mat-raised-button type="button" color="primary" (click)="getDataFromService()">Search</button>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
       <!-- Brand Column -->
-      <ng-container matColumnDef="brand">
-        <th mat-header-cell *matHeaderCellDef> Brand </th>
+      <ng-container matColumnDef="Brand">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
         <td mat-cell *matCellDef="let car"> {{car.Brand}} </td>
       </ng-container>
 
       <!-- Model Column -->
-      <ng-container matColumnDef="model">
-        <th mat-header-cell *matHeaderCellDef> Model </th>
+      <ng-container matColumnDef="Model">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
         <td mat-cell *matCellDef="let car"> {{car.Model}} </td>
       </ng-container>
 
       <!-- Production date Column -->
-      <ng-container matColumnDef="productionYear">
-        <th mat-header-cell *matHeaderCellDef> Production year </th>
+      <ng-container matColumnDef="ProductionYear">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Production year </th>
         <td mat-cell *matCellDef="let car"> {{car.ProductionYear}} </td>
       </ng-container>
 
       <!-- Capacity Column -->
-      <ng-container matColumnDef="capacity">
-        <th mat-header-cell *matHeaderCellDef> Capacity </th>
+      <ng-container matColumnDef="Capacity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
         <td mat-cell *matCellDef="let car"> {{car.Capacity}} </td>
       </ng-container>
 
       <!-- Category Column -->
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Category </th>
+      <ng-container matColumnDef="Category">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
         <td mat-cell *matCellDef="let car"> {{car.Category}} </td>
       </ng-container>
 
       <!-- Show details column -->
-      <ng-container matColumnDef="showdetails">
+      <ng-container matColumnDef="ShowDetails">
         <th mat-header-cell *matHeaderCellDef> Show details </th>
         <td mat-cell *matCellDef=""> <button type="button" mat-raised-button color="primary">See details</button> </td>
       </ng-container>
