CRA-189: Add filter functionality to backend endpoint

--- a/frontend/src/app/car-search/car-search-filter/car-search-filter.component.html
+++ b/frontend/src/app/car-search/car-search-filter/car-search-filter.component.html
@@ -2,28 +2,20 @@
   <div fxLayout="row">
     <mat-card-title>Filters</mat-card-title>
     <span fxFlex></span>
-    <button type="button" mat-raised-button color="primary" fxFlexAlign="flex-end">Clear</button>
+    <button type="button" mat-raised-button color="primary" fxFlexAlign="flex-end" (click)="clearFilters()">Clear</button>
   </div>
-  <!-- Transmission filter section -->
-  <mat-card class="transmission-filter mat-elevation-z0">
-    <mat-card-title class="category-title">Transmission</mat-card-title>
-    <mat-card-content fxLayout="column" fxLayoutGap="2%">
-      <mat-checkbox class="filter-checkbox" color="primary">Manual</mat-checkbox>
-      <mat-checkbox class="filter-checkbox" color="primary">Automatic</mat-checkbox>
-    </mat-card-content>
-  </mat-card>
   <!-- Brand and model filter section -->
   <mat-card class="brand-and-model-filter mat-elevation-z0">
     <mat-card-title class="category-title">Brand and model</mat-card-title>
     <mat-card-content fxLayout="column" fxLayoutGap="2%">
-      <div class="brand-filter-group" *ngFor="let brand of modelsByBrand | keyvalue">
-        <mat-checkbox class="filter-checkbox" color="primary">{{brand.key}}</mat-checkbox>
-        <ul class="model-list">
-          <li *ngFor="let model of brand.value">
-            <mat-checkbox class="filter-checkbox" color="primary">{{model}}</mat-checkbox>
-          </li>
-        </ul>
-      </div>
+        <div class="brand-filter-group" *ngFor="let brand of modelsByBrand | keyvalue">
+          <mat-checkbox class="filter-checkbox" color="primary" [checked]="brandChecked.get(brand.key)" [indeterminate]="checkIfModelsChecked(brand.key)" (change)="brandCheckChanged($event.checked, brand.key)">{{brand.key}}</mat-checkbox>
+          <ul class="model-list">
+            <li *ngFor="let model of brand.value">
+              <mat-checkbox class="filter-checkbox" color="primary" [ngModel]="modelChecked.get(model)" (change)="modelChecked.set(model, $event.checked); updateBrandChecked()">{{model}}</mat-checkbox>
+            </li>
+          </ul>
+        </div>
     </mat-card-content>
   </mat-card>
   <!-- Production year filter section -->
@@ -44,12 +36,21 @@
       </div>
     </mat-card-content>
   </mat-card>
+  <!-- Capacity filter section -->
+  <mat-card class="capacity-filter mat-elevation-z0">
+    <mat-card-title class="category-title">Horse power</mat-card-title>
+    <mat-card-content fxLayout="column" fxLayoutGap="2%">
+      <div class="custom-ngx-slider">
+        <ngx-slider [(value)]="horsePowerSliderConfig.value" [(highValue)]="horsePowerSliderConfig.highValue" [options]="horsePowerSliderConfig.options"></ngx-slider>
+      </div>
+    </mat-card-content>
+  </mat-card>
   <!-- Category filter section -->
   <mat-card class="category-filter mat-elevation-z0" style="border-bottom: 0px">
     <mat-card-title class="category-title">Category</mat-card-title>
     <mat-card-content fxLayout="column" fxLayoutGap="2%">
-      <div *ngFor="let type of uniqueCarCategories">
-        <mat-checkbox class="filter-checkbox" color="primary">{{type}}</mat-checkbox>
+      <div *ngFor="let category of uniqueCarCategories">
+        <mat-checkbox class="filter-checkbox" color="primary" [ngModel]="categoryChecked.get(category)" (change)="categoryChecked.set(category, $event.checked)">{{category}}</mat-checkbox>
       </div>
     </mat-card-content>
   </mat-card>
