--- a/frontend/src/app/car-search/car-search/car-search.component.html
+++ b/frontend/src/app/car-search/car-search/car-search.component.html
@@ -30,6 +30,12 @@
         <td mat-cell *matCellDef="let car"> {{car.capacity}} </td>
       </ng-container>
 
+      <!-- Capacity Column -->
+      <ng-container matColumnDef="horsePower">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Horse power </th>
+        <td mat-cell *matCellDef="let car"> {{car.horsePower}} </td>
+      </ng-container>
+
       <!-- Category Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
