Hotfix: fix node package dependencies
Hotfix: fix node package dependencies

Related work items: #18

--- a/frontend/src/app/car-search/car-details/car-details.component.html
+++ b/frontend/src/app/car-search/car-details/car-details.component.html
@@ -5,36 +5,36 @@
     </button>
     <h3 matSubheader>Car Details</h3>
     <mat-list-item datasrc="car">
-      <h1 style="font-size: 40px">{{car.brand}} {{car.model}}</h1>
+      <h1 style="font-size: 40px">{{car?.brand}} {{car?.model}}</h1>
     </mat-list-item>
     <mat-list-item datasrc="car">
       <div class="div-detail">
         <span>ProductionYear:</span>
-        <span>{{car.productionYear}}</span>
+        <span>{{car?.productionYear}}</span>
       </div>
     </mat-list-item>
     <mat-list-item datasrc="car">
       <div class="div-detail">
         <span>Capacity:</span>
-        <span>{{car.capacity}}</span>
+        <span>{{car?.capacity}}</span>
       </div>
     </mat-list-item>
     <mat-list-item datasrc="car">
       <div class="div-detail">
         <span>Category:</span>
-        <span>{{car.category}}</span>
+        <span>{{car?.category}}</span>
       </div>
     </mat-list-item>
     <mat-list-item datasrc="car">
       <div class="div-detail">
         <span>Horse Power:</span>
-        <span>{{car.horsePower}}</span>
+        <span>{{car?.horsePower}}</span>
       </div>
     </mat-list-item>
     <mat-list-item datasrc="car">
       <div class="div-detail">
         <span>Company:</span>
-        <span>{{car.providerCompany}}</span>
+        <span>{{car?.providerCompany}}</span>
       </div>
     </mat-list-item>
     <mat-list-item>
