--- a/frontend/src/app/car-search/car-search/car-search.component.html
+++ b/frontend/src/app/car-search/car-search/car-search.component.html
@@ -1,6 +1,6 @@
 <div class="container" fxLayout="row" fxLayoutGap="2%">
   <div fxFlex="20%">
-    <app-car-search-filter></app-car-search-filter>
+    <app-car-search-filter [cars$]="cars$" (change)="filterUpdated($event)"></app-car-search-filter>
   </div>
   <div fxFlex="80%" fxLayout="column" fxLayoutGap="0.5%">
     <button class="search-button" mat-raised-button type="button" color="primary" (click)="getDataFromService()">Search</button>
@@ -9,13 +9,13 @@
       <!-- Brand Column -->
       <ng-container matColumnDef="brand">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
-        <td mat-cell *matCellDef="let car"> {{car.brand}} </td>
+        <td mat-cell *matCellDef="let car"> {{car.brand | titlecase }} </td>
       </ng-container>
 
       <!-- Model Column -->
       <ng-container matColumnDef="model">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
-        <td mat-cell *matCellDef="let car"> {{car.model}} </td>
+        <td mat-cell *matCellDef="let car"> {{car.model | titlecase }} </td>
       </ng-container>
 
       <!-- Production year Column -->
@@ -39,13 +39,13 @@
       <!-- Category Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-        <td mat-cell *matCellDef="let car"> {{car.category}} </td>
+        <td mat-cell *matCellDef="let car"> {{car.category | titlecase}} </td>
       </ng-container>
 
       <!-- ProviderCompany Column -->
       <ng-container matColumnDef="providerCompany">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Provider Company </th>
-        <td mat-cell *matCellDef="let car"> {{car.providerCompany}} </td>
+        <td mat-cell *matCellDef="let car"> {{car.providerCompany | titlecase}} </td>
       </ng-container>
 
       <!-- Show details column -->
