--- a/frontend/src/app/car-search/components/car-search/car-search.component.css
+++ b/frontend/src/app/car-search/components/car-search/car-search.component.css
@@ -16,7 +16,7 @@ button.search-button {
   font-size: 16px;
   text-align: center;
   vertical-align: center;
-  height: 5%;
+  height: 40px;
 }
 
 .check-price {
