--- a/frontend/src/app/car-search/components/car-search-filter/car-search-filter.component.html
+++ b/frontend/src/app/car-search/components/car-search-filter/car-search-filter.component.html
@@ -9,10 +9,18 @@
     <mat-card-title class="category-title">Brand and model</mat-card-title>
     <mat-card-content fxLayout="column" fxLayoutGap="2%">
         <div class="brand-filter-group" *ngFor="let brand of brands | keyvalue">
-          <mat-checkbox class="filter-checkbox" color="primary" [checked]="isBrandSelected(brand.key)" (change)="setBrandSelected(brand.key, $event.checked)">{{brand.key | titlecase}}</mat-checkbox>
+          <mat-checkbox class="filter-checkbox"
+                        color="primary"
+                        [checked]="isBrandSelected(brand.key)"
+                        (change)="setBrandSelected(brand.key, brand.value, $event.checked)"
+          >{{brand.key | titlecase}}</mat-checkbox>
           <ul class="model-list">
             <li *ngFor="let model of brand.value">
-              <mat-checkbox class="filter-checkbox" color="primary" [checked]="isModelSelected(model) || isBrandSelected(brand.key)" (change)="setModelSelected(model, brand.key, $event.checked)">{{model | titlecase}}</mat-checkbox>
+              <mat-checkbox class="filter-checkbox"
+                            color="primary"
+                            [checked]="isModelSelected(model) && isBrandSelected(brand.key)"
+                            (change)="setModelSelected(model, brand.key, $event.checked)"
+              >{{model | titlecase}}</mat-checkbox>
             </li>
           </ul>
         </div>
