--- a/frontend/src/app/history/currently-rented/currently-rented.component.html
+++ b/frontend/src/app/history/currently-rented/currently-rented.component.html
@@ -1,29 +1,36 @@
 <div class="container">
+  <button class="return-button" type="button" mat-raised-button color="primary" [routerLink]="''">Return</button>
   <h2>Currently rented cars</h2>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
     <!-- Brand Column -->
     <ng-container matColumnDef="brand">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.brand | titlecase }} </td>
+      <td mat-cell *matCellDef="let entry"> {{entry.car.brand | titlecase }} </td>
     </ng-container>
 
     <!-- Model Column -->
     <ng-container matColumnDef="model">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.model  | titlecase }} </td>
+      <td mat-cell *matCellDef="let entry"> {{entry.car.model  | titlecase }} </td>
     </ng-container>
 
     <!-- Production year Column -->
     <ng-container matColumnDef="rentDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Rent date </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.rentDate.toLocaleString('pl')}} </td>
+      <td mat-cell *matCellDef="let entry"> {{formatDate(entry.rentDate)}} </td>
+    </ng-container>
+
+    <!-- Production year Column -->
+    <ng-container matColumnDef="returnDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Return date</th>
+      <td mat-cell *matCellDef="let entry"> {{formatDate(entry.returnDate)}} </td>
     </ng-container>
 
     <!-- ProviderCompany Column -->
     <ng-container matColumnDef="provider">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Provider Company </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.provider.name}} </td>
+      <td mat-cell *matCellDef="let entry"> {{entry.car.provider}} </td>
     </ng-container>
 
     <!-- Show details column -->
@@ -36,5 +43,8 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <div fxLayout="row" fxLayoutAlign="center center">
+    <mat-spinner *ngIf="loading$ | async"></mat-spinner>
+  </div>
 </div>
 
