--- a/frontend/src/app/car-search/components/car-search/car-search.component.html
+++ b/frontend/src/app/car-search/components/car-search/car-search.component.html
@@ -3,60 +3,66 @@
     <app-car-search-filter [cars$]="cars$" (change)="filterUpdated($event)"></app-car-search-filter>
   </div>
   <div fxFlex="80%" fxLayout="column" fxLayoutGap="0.5%">
-    <button class="search-button" mat-raised-button type="button" color="primary" (click)="getDataFromService()">Search</button>
+    <button class="search-button" [attr.cy-id]="'search-button'" mat-raised-button type="button" color="primary" (click)="getDataFromService()">Search</button>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
       <!-- Brand Column -->
       <ng-container matColumnDef="brand">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
-        <td mat-cell *matCellDef="let car"> {{car.brand | titlecase }} </td>
+        <td mat-cell [attr.cy-id]="'brand-col'"  *matCellDef="let car"> {{car.brand | titlecase }} </td>
       </ng-container>
 
       <!-- Model Column -->
       <ng-container matColumnDef="model">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
-        <td mat-cell *matCellDef="let car"> {{car.model | titlecase }} </td>
+        <td mat-cell [attr.cy-id]="'model-col'"  *matCellDef="let car"> {{car.model | titlecase }} </td>
       </ng-container>
 
       <!-- Production year Column -->
       <ng-container matColumnDef="productionYear">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Production year </th>
-        <td mat-cell *matCellDef="let car"> {{car.productionYear}} </td>
+        <td mat-cell [attr.cy-id]="'production-col'"  *matCellDef="let car"> {{car.productionYear}} </td>
       </ng-container>
 
       <!-- Capacity Column -->
       <ng-container matColumnDef="capacity">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
-        <td mat-cell *matCellDef="let car"> {{car.capacity}} </td>
+        <td mat-cell [attr.cy-id]="'capacity-col'"  *matCellDef="let car"> {{car.capacity}} </td>
       </ng-container>
 
       <!-- Capacity Column -->
       <ng-container matColumnDef="horsePower">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Horse power </th>
-        <td mat-cell *matCellDef="let car"> {{car.horsePower}} </td>
+        <td mat-cell [attr.cy-id]="'power-col'"  *matCellDef="let car"> {{car.horsePower}} </td>
       </ng-container>
 
       <!-- Category Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-        <td mat-cell *matCellDef="let car"> {{car.category | titlecase}} </td>
+        <td mat-cell [attr.cy-id]="'category-col'"  *matCellDef="let car"> {{car.category | titlecase}} </td>
       </ng-container>
 
       <!-- ProviderCompany Column -->
       <ng-container matColumnDef="providerCompany">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Provider Company </th>
-        <td mat-cell *matCellDef="let car"> {{car.providerCompany | titlecase}} </td>
+        <td mat-cell [attr.cy-id]="'provider-col'" *matCellDef="let car"> {{car.providerCompany | titlecase}} </td>
       </ng-container>
 
       <!-- Show details column -->
       <ng-container matColumnDef="showDetails">
         <th mat-header-cell *matHeaderCellDef> Show details </th>
-        <td mat-cell *matCellDef="let car"> <button type="button" mat-raised-button color="primary" (click)="openDetailsDialog(car)">See details</button> </td>
+        <td mat-cell *matCellDef="let car">
+          <button
+            type="button"
+            [attr.cy-id]="'details-button'"
+            mat-raised-button color="primary"
+            (click)="openDetailsDialog(car)">See details</button>
+        </td>
       </ng-container>
 
       <!-- Row definitions -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row [attr.cy-id]="'car-list-row'" *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <div fxLayout="row" fxLayoutAlign="center center">
       <mat-spinner *ngIf="loading$ | async"></mat-spinner>
