implement car rental history without details

--- a/frontend/src/app/auth/components/menubar-component/menubar.component.html
+++ b/frontend/src/app/auth/components/menubar-component/menubar.component.html
@@ -6,7 +6,7 @@
     <h1 >Car Rentals</h1>
   </button>
   <span class="menu-spacer"></span>
-  <button *appVisibleFor="[]" mat-button>
+  <button *appVisibleFor="[]" mat-button [routerLink]="'history'">
     <mat-icon>history</mat-icon>
     Account history
   </button>
