--- a/frontend/src/app/history/rental-history/rental-history.component.html
+++ b/frontend/src/app/history/rental-history/rental-history.component.html
@@ -1,1 +1,49 @@
-<p>rental-history works!</p>
+<div class="container">
+  <button class="return-button" type="button" mat-raised-button color="primary" [routerLink]="''">Return</button>
+  <h2>Currently rented cars</h2>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+
+    <!-- Brand Column -->
+    <ng-container matColumnDef="brand">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
+      <td mat-cell *matCellDef="let entry"> {{entry.carBrand| titlecase }} </td>
+    </ng-container>
+
+    <!-- Model Column -->
+    <ng-container matColumnDef="model">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
+      <td mat-cell *matCellDef="let entry"> {{entry.carModel  | titlecase }} </td>
+    </ng-container>
+
+    <!-- Production year Column -->
+    <ng-container matColumnDef="rentDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Rent date </th>
+      <td mat-cell *matCellDef="let entry"> {{formatDate(entry.rentDate)}} </td>
+    </ng-container>
+
+    <!-- Production year Column -->
+    <ng-container matColumnDef="returnDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Return date</th>
+      <td mat-cell *matCellDef="let entry"> {{formatDate(entry.returnDate)}} </td>
+    </ng-container>
+
+    <!-- ProviderCompany Column -->
+    <ng-container matColumnDef="provider">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Provider Company </th>
+      <td mat-cell *matCellDef="let entry"> {{entry.carProvider}} </td>
+    </ng-container>
+
+    <!-- Show details column -->
+    <ng-container matColumnDef="showDetails">
+      <th mat-header-cell *matHeaderCellDef> Show Details </th>
+      <td mat-cell *matCellDef="let entry"> <button type="button" mat-raised-button color="primary" *appVisibleFor="[Client]">See details</button> </td>
+    </ng-container>
+
+    <!-- Row definitions -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <div fxLayout="row" fxLayoutAlign="center center">
+    <mat-spinner *ngIf="loading$ | async"></mat-spinner>
+  </div>
+</div>
