implement car rental history without details

--- a/frontend/src/app/auth/components/menubar-component/menubar.component.html
+++ b/frontend/src/app/auth/components/menubar-component/menubar.component.html
@@ -8,7 +8,7 @@
   <span class="menu-spacer"></span>
   <button *appVisibleFor="[]" mat-button [routerLink]="'history'">
     <mat-icon>history</mat-icon>
-    Account history
+    History
   </button>
   <button *appVisibleFor="[]" mat-button [routerLink]="'currentlyRented'">
     <mat-icon>directions_car</mat-icon>
