--- a/frontend/src/app/history/currently-rented/currently-rented.component.html
+++ b/frontend/src/app/history/currently-rented/currently-rented.component.html
@@ -33,6 +33,12 @@
       <td mat-cell *matCellDef="let entry"> {{entry.carProvider}} </td>
     </ng-container>
 
+    <!-- User email Column -->
+    <ng-container matColumnDef="userEmail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> User email</th>
+      <td mat-cell *matCellDef="let entry"> {{entry.userEmail}} </td>
+    </ng-container>
+
     <!-- Show details column -->
     <ng-container matColumnDef="returnMe">
       <th mat-header-cell *matHeaderCellDef> Return me </th>
