--- a/frontend/src/app/history/rental-history/rental-history.component.html
+++ b/frontend/src/app/history/rental-history/rental-history.component.html
@@ -15,22 +15,28 @@
       <td mat-cell *matCellDef="let entry"> {{entry.carModel  | titlecase }} </td>
     </ng-container>
 
-    <!-- Production year Column -->
+    <!-- Rent date Column -->
     <ng-container matColumnDef="rentDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Rent date </th>
       <td mat-cell *matCellDef="let entry"> {{formatDate(entry.rentDate)}} </td>
     </ng-container>
 
-    <!-- Production year Column -->
+    <!-- Return date Column -->
     <ng-container matColumnDef="returnDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Return date</th>
       <td mat-cell *matCellDef="let entry"> {{formatDate(entry.returnDate)}} </td>
     </ng-container>
 
-    <!-- ProviderCompany Column -->
+    <!-- Provider Column -->
     <ng-container matColumnDef="provider">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Provider Company </th>
       <td mat-cell *matCellDef="let entry"> {{entry.carProvider}} </td>
+    </ng-container>
+
+    <!-- User email Column -->
+    <ng-container matColumnDef="userEmail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> User email</th>
+      <td mat-cell *matCellDef="let entry"> {{entry.userEmail}} </td>
     </ng-container>
 
     <!-- Show details column -->
