--- a/frontend/src/app/car-search/components/car-reservation-period/car-reservation-period.component.html
+++ b/frontend/src/app/car-search/components/car-reservation-period/car-reservation-period.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
     <mat-form-field>
       <mat-label>Choose start date</mat-label>
-      <input [formControl]="start" matInput [matDatepicker]="picker">
+      <input [formControl]="start" matInput [matDatepicker]="picker" [min]="minDate">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
