--- a/frontend/src/app/history/rental-history/rental-history.component.html
+++ b/frontend/src/app/history/rental-history/rental-history.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <button class="return-button" type="button" mat-raised-button color="primary" [routerLink]="''">Return</button>
-  <h2>Currently rented cars</h2>
+  <h2>Car rent history</h2>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
     <!-- Brand Column -->
@@ -39,10 +39,22 @@
       <td mat-cell *matCellDef="let entry"> {{entry.userEmail}} </td>
     </ng-container>
 
+    <!-- Returned Column -->
+    <ng-container matColumnDef="returned">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Returned</th>
+      <td mat-cell *matCellDef="let entry"> {{entry.returned == true ? "Yes" : "No"}} </td>
+    </ng-container>
+
     <!-- Show details column -->
     <ng-container matColumnDef="showDetails">
       <th mat-header-cell *matHeaderCellDef> Show Details </th>
-      <td mat-cell *matCellDef="let entry"> <button type="button" mat-raised-button color="primary" *appVisibleFor="[Client]">See details</button> </td>
+      <td mat-cell *matCellDef="let entry">
+        <button
+          type="button"
+          mat-raised-button color="primary"
+          *ngIf="entry.returned == true"
+          (click)="openDetailsDialog(entry)">See details</button>
+      </td>
     </ng-container>
 
     <!-- Row definitions -->
